--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
+			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.9.0</version>
 			<scope>test</scope>
 		</dependency>
